--- a/TweetFellowsHW/UserTweetsNib.xib
+++ b/TweetFellowsHW/UserTweetsNib.xib
@@ -19,19 +19,19 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHQ-Kf-gOz">
-                        <rect key="frame" x="129" y="10" width="262" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHQ-Kf-gOz">
+                        <rect key="frame" x="149" y="11" width="242" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="favs" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fW-GJ-cbT">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="favs" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="6" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1fW-GJ-cbT">
                         <rect key="frame" x="8" y="10" width="101" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="101" id="7hp-xK-a6y"/>
                             <constraint firstAttribute="height" constant="21" id="Mgb-r5-mmE"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -40,21 +40,21 @@
                     <constraint firstItem="flx-P1-dEr" firstAttribute="top" secondItem="FZF-mi-eZl" secondAttribute="topMargin" constant="42" id="0C2-FK-vFs"/>
                     <constraint firstItem="1fW-GJ-cbT" firstAttribute="top" secondItem="FZF-mi-eZl" secondAttribute="topMargin" constant="2" id="0qQ-Sy-6me"/>
                     <constraint firstItem="flx-P1-dEr" firstAttribute="leading" secondItem="FZF-mi-eZl" secondAttribute="leadingMargin" id="3AK-wl-sFj"/>
-                    <constraint firstItem="uHQ-Kf-gOz" firstAttribute="leading" secondItem="1fW-GJ-cbT" secondAttribute="trailing" constant="20" id="8Za-eq-SfV"/>
+                    <constraint firstItem="uHQ-Kf-gOz" firstAttribute="leading" secondItem="1fW-GJ-cbT" secondAttribute="trailing" constant="40" id="8Za-eq-SfV"/>
                     <constraint firstItem="flx-P1-dEr" firstAttribute="trailing" secondItem="FZF-mi-eZl" secondAttribute="trailingMargin" id="C0z-xW-G79"/>
                     <constraint firstItem="uHQ-Kf-gOz" firstAttribute="trailing" secondItem="FZF-mi-eZl" secondAttribute="trailingMargin" id="Kn8-ZY-JLc"/>
-                    <constraint firstItem="uHQ-Kf-gOz" firstAttribute="top" secondItem="FZF-mi-eZl" secondAttribute="topMargin" constant="2" id="Occ-cX-IvW"/>
+                    <constraint firstItem="uHQ-Kf-gOz" firstAttribute="top" secondItem="FZF-mi-eZl" secondAttribute="topMargin" constant="3" id="Occ-cX-IvW"/>
                     <constraint firstItem="1fW-GJ-cbT" firstAttribute="leading" secondItem="FZF-mi-eZl" secondAttribute="leadingMargin" id="RCc-ph-O4f"/>
                     <constraint firstAttribute="bottomMargin" secondItem="flx-P1-dEr" secondAttribute="bottom" constant="-1" id="ZTG-Ey-yUq"/>
                     <constraint firstItem="flx-P1-dEr" firstAttribute="top" secondItem="1fW-GJ-cbT" secondAttribute="bottom" constant="19" id="t8t-8w-WxQ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="favsCount" destination="1fW-GJ-cbT" id="0Aq-GZ-IvY"/>
+                <outlet property="favsCount" destination="1fW-GJ-cbT" id="DRg-vR-y4K"/>
                 <outlet property="tweetText" destination="flx-P1-dEr" id="cKd-fS-zaN"/>
                 <outlet property="tweetTime" destination="uHQ-Kf-gOz" id="zhX-V5-OYQ"/>
             </connections>
-            <point key="canvasLocation" x="253.5" y="230"/>
+            <point key="canvasLocation" x="253.5" y="229"/>
         </tableViewCell>
     </objects>
 </document>
